# ChangeLog for www-client/mozilla-firefox
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.523 2009/07/31 14:25:26 nirbheek Exp $

*mozilla-firefox-3.5.1-r1 (31 Jul 2009)

  31 Jul 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  +mozilla-firefox-3.5.1-r1.ebuild:
  Bump from mozilla overlay (to match changes in xulrunner-1.9.1.1)

*mozilla-firefox-3.0.12 (22 Jul 2009)

  22 Jul 2009; Raúl Porcel <armin76@gentoo.org>
  +mozilla-firefox-3.0.12.ebuild:
  Version bump

  22 Jul 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  mozilla-firefox-3.5.1.ebuild:
  Remove missed dep on x11-plugins/noscript after pkgmove in 3.5.1

  21 Jul 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  mozilla-firefox-2.0.0.19.ebuild, mozilla-firefox-3.0.10.ebuild,
  mozilla-firefox-3.0.11.ebuild, mozilla-firefox-3.5.1.ebuild, metadata.xml:
  Fix deps for pkgmove x11-plugins/noscript -> www-plugins/noscript

*mozilla-firefox-3.5.1 (21 Jul 2009)

  21 Jul 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  -mozilla-firefox-3.5-r3.ebuild, +mozilla-firefox-3.5.1.ebuild:
  Bump to 3.5.1

*mozilla-firefox-3.5-r3 (13 Jul 2009)

  13 Jul 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  -mozilla-firefox-3.5-r2.ebuild, +mozilla-firefox-3.5-r3.ebuild:
  Add StartupNotify=true with USE=startup-notification, bug 237317

*mozilla-firefox-3.5-r2 (02 Jul 2009)

  02 Jul 2009; <nirbheek@gentoo.org> -mozilla-firefox-3.5-r1.ebuild,
  +mozilla-firefox-3.5-r2.ebuild:
  Previous fix for bug 256688 was a security risk, and was build-time
  instead of runtime as well

*mozilla-firefox-3.5-r1 (02 Jul 2009)

  02 Jul 2009; <nirbheek@gentoo.org> -mozilla-firefox-3.5.ebuild,
  +mozilla-firefox-3.5-r1.ebuild:
  Fix bug 276024 (NOSHORTLANGS update), bug 275991 (Missing en-US from
  LINGUAS) and bug 256688 (LD_LIBRARY_PATH ignored by firefox)

*mozilla-firefox-3.5 (30 Jun 2009)
