@@ -1,6 +1,12 @@
 # ChangeLog for www-client/mozilla-firefox
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.523 2009/07/31 14:25:26 nirbheek Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.524 2009/08/02 16:27:01 tommy Exp $
+
+  02 Aug 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  -mozilla-firefox-3.0.10.ebuild, mozilla-firefox-3.0.11.ebuild,
+  mozilla-firefox-3.0.12.ebuild:
+  Drop mozilla-firefox-3.0.10, force dep on xulrunner-1.9.0* for
+  mozilla-firefox-3.0.* (proxy commit for mozilla)
 
 *mozilla-firefox-3.5.1-r1 (31 Jul 2009)
 
